<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/grados"
        android:textColor="@android:color/background_light"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/labelCuidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelGrados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/ciudad"
        android:textColor="@color/light_whiteblue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelCuidad"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/status"
        android:textColor="@color/light_whiteblue"
        android:textSize="24sp" />
</RelativeLayout>